# smartmonetize--ai-powered-revenue-growth-engine

./: .gitignore  AFTER_CLONING.md  AGENT_MCP_TRUST_BOUNDARY_AUDIT.md  CASE_STUDY.md  DIRECTORY_SUPPORT_NOTE_DRAFT.md  EXAMPLE_MCP_X402_AUDIT_REQUEST.md  FIRST_RESPONSE_MCP_X402_AUDIT_SKELETON.md  LICENSE  MCP_PROBE_HANDOFF_DRAFT.md  MCP_X402_ENDPOINT_AUDIT.md  OFFER.md  QUICKSTART_TRIAGE.md  README.md  RELEASE_NOTES.md  SAMPLE_REPORT.md  START_HERE.md  pyproject.toml
.github/ISSUE_TEMPLATE/: agent_mcp_trust_boundary_audit.yml  config.yml  mcp_x402_endpoint_audit.yml  revenue_triage_audit.yml
examples/: ontario_protocol_metrics.json  saas_metrics.json
smartmonetize/: __init__.py  cli.py  data_collection.py  execution_module.py  strategy_analysis.py
tests/: test_offer_files.py  test_smartmonetize.py
